--- a/styles/style.css
+++ b/styles/style.css
@@ -8,19 +8,6 @@ html {
   block-size: 100%;
 }
 
-.page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: 0 auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
-}
-
 h1,
 h2,
 h3,
@@ -40,6 +27,19 @@ ol {
   list-style: none;
 }
 
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 1200px;
+  block-size: 100%;
+  margin: 0 auto;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  background-color: #1b1919;
+}
+
 /* Кастомный скроллбар */
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
@@ -50,9 +50,10 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
+/* visually-hidden */
 .visually-hidden {
   position: absolute;
   inline-size: 1px;
@@ -76,17 +77,7 @@ ol {
   flex: 0 0 711px;
 }
 
-/* Правая колонка */
-.content__details {
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 26px;
-  block-size: 100%;
-}
-
-/* Уточнение размеров */
+/* Контейнер видео */
 .result__video-container {
   position: relative;
   inline-size: 711px;
@@ -160,11 +151,11 @@ ol {
 }
 
 .search-form__pseudo-checkbox {
+  display: inline-block;
   inline-size: 19px;
   block-size: 19px;
   border: 1px solid #fff;
   padding: 1px;
-  display: inline-block;
 }
 
 .search-form__pseudo-checkbox::after {
@@ -230,7 +221,17 @@ ol {
   outline-offset: 2px;
 }
 
-/* Стили текстов */
+/* Правая колонка */
+.content__details {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 26px;
+  block-size: 100%;
+}
+
+/* Заголовок */
 .title {
   font-family: Oswald, sans-serif;
   font-weight: 700;
@@ -243,6 +244,7 @@ ol {
   color: #545050;
 }
 
+/* Контейнер списка */
 .content__list-container {
   position: relative;
   block-size: 298px;
@@ -299,7 +301,7 @@ ol {
 
 .content__video-card-description-container {
   flex-grow: 1;
-   min-inline-size: 0;
+  min-inline-size: 0;
   padding: 2px 2px 0 0;
 }
 
