--- a/styles/style.css
+++ b/styles/style.css
@@ -306,7 +306,7 @@ ol {
 }
 
 .content__video-card-title {
-  inline-size: 100%;
+  inline-size: 196px;
   font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 30px;
